# Longest-English-word-chain

./: .gitignore  CMakeLists.txt  Readme.md
cli/: CMakeLists.txt  cli_main.cpp  cli_main.h
core/: CMakeLists.txt  core.cpp  core.h  main.cpp  main.h
core/CLI/: cli_main.cpp
core/cli/: cli_main.cpp
core_test/: CMakeLists.txt  core_test.cpp  gen_chain_char_default.txt  gen_chain_word_default.txt  gen_chains_default.txt  random_gen.cpp  xxhash.h
core_test/test_point/: excp_too_long_129.txt  head_sel.txt  jail_sel.txt  loop_0.txt  loop_1.txt  loop_2.txt  no_loop_0.txt  no_loop_1.txt  no_loop_2.txt  no_loop_3.txt  no_loop_4.txt
googletest/cmake/: internal_utils.cmake
googletest/include/gtest/: gtest.h
googletest/src/: gtest-printers.cc  gtest.cc
googletest/test/: googletest-param-test-test.cc
gui/: CMakeLists.txt  main.cpp  main_ui.cpp  main_ui.h  main_ui.ui
include/: core.h  testlib.h  xxhash.h
matching_test/: CMakeLists.txt  matching_test.cpp
publib/: random_gen.cpp
src/cli/: CMakeLists.txt  cli_main.cpp  cli_main.h
src/core/: CMakeLists.txt  core.cpp
src/matching_test/: CMakeLists.txt  matching_test.cpp
src/publib/: random_gen.cpp  testlib.cpp
test/: CMakeLists.txt  core_test.cpp  gen_chains_default.txt
test/googletest/cmake/: internal_utils.cmake
test/googletest/include/gtest/: gtest-death-test.h
test/googletest/include/gtest/internal/: gtest-port.h
test/googletest/test/: googletest-break-on-failure-unittest.py  googletest-catch-exceptions-test.py  googletest-color-test.py  googletest-env-var-test.py  googletest-failfast-unittest.py  googletest-filter-unittest.py  googletest-global-environment-unittest.py  googletest-json-outfiles-test.py  googletest-json-output-unittest.py  googletest-list-tests-unittest.py  googletest-output-test.py  googletest-param-test-invalid-name1-test.py  googletest-param-test-invalid-name2-test.py  googletest-setuptestsuite-test.py  googletest-shuffle-test.py  googletest-throw-on-failure-test.py  googletest-uninitialized-test.py  gtest_help_test.py  gtest_list_output_unittest.py  gtest_skip_check_output_test.py  gtest_skip_environment_check_output_test.py  gtest_testbridge_test.py  gtest_unittest.cc  gtest_xml_outfiles_test.py  gtest_xml_output_unittest.py  gtest_xml_test_utils.py
test/test_point/: excp_loop.txt  excp_too_long_129.txt  loop_1.txt  loop_3.txt  no_loop_0.txt  no_loop_1.txt  no_loop_3.txt
testlib/: random_gen.cpp  testlib.cpp
